# school_network

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  wait-for-db.py
backend/documentation/: backend_explained_Sep26_2025.md
backend/opportunities/: admin.py  models.py  tasks.py  urls.py  views.py
backend/opportunities/migrations/: 0001_initial.py
backend/project/: celery.py  settings.py  urls.py
backend/users/: admin.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_userprofile_email_userprofile_enable_notifications_and_more.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js
frontend/documentation/: frontend_explained_Sep26_2025.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  index.ts  opportunities.ts  users.ts
frontend/src/components/atoms/: Badge.tsx  Button.tsx  Heading.tsx  Input.tsx  Text.tsx  index.ts
frontend/src/components/molecules/: FormField.tsx  OpportunityCard.tsx
frontend/src/components/organisms/: Footer.tsx  Header.tsx
frontend/src/components/templates/: PageLayout.tsx
frontend/src/components/ui/: color-mode.tsx  provider.tsx
frontend/src/hooks/: useOpportunities.ts  useUserProfile.ts
frontend/src/pages/: Dashboard.tsx  OpportunitiesList.tsx  OpportunityDetail.tsx  OpportunityForm.tsx  Settings.tsx  UserProfile.tsx
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  date.ts
